[package]
name = "omse-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
toml = "0.5.8"
futures = "0.3.21"
reqwest = "0.11.10"
clokwerk = "0.3.5"
pretty_env_logger = "0.4.0"
log = "0.4.16"
thiserror = "1.0.30"

[dependencies.clap]
version = "3.1.8"
features = ["derive"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.obws]
path = "obws"

[dependencies.tokio]
version = "1.17.0"
features = ["full"]
